plugins {
    id 'java'
}

repositories {

}

dependencies {

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(18)
    }

    modularity.inferModulePath = true
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '--enable-preview'
    ]
}

